html added navbar

--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment</title>
-
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <header><h1>Assignment</h1></header>
+    <header>
+        <nav class="container">
+            <span class="logo">Fitness</span>
+        <ul>
+            <li class="active">Home</li>
+            <li>Services</li>
+            <li>Contact</li>
+            <li>About</li>
+        </ul>
+        </nav>
+        <div class="banner">
+
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
