--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
@@ -16,11 +17,150 @@
             <li>Contact</li>
             <li>About</li>
         </ul>
+        <i class='bx bx-menu menu-icon'></i>
         </nav>
         <div class="banner">
-
+      <div class="banner-content">
+        <h1>Get body in shape & stay healthy</h1>
+        <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+        <div class="button-container">
+            <button class="btn-primary">Join Now</button>
+            <button class="btn-secondry">Downlod App</button>
+        </div>
+      </div>
+      <div class="banner-image-container"><div class="banner-image"><img src="images/Images 2.png" alt="">
+        <div class="floating-card-top">
+            <h5>500+</h5>
+            <p>Free Workout Videos</p>
+        </div>
+        <div class="floating-card-bottm">
+            <div class="circle"></div>
+            <div><h5>350+</h5>
+                <p>Video Tutorial</p>
+            </div>
+        </div>
+    </div>
+    </div>
         </div>
     </header>
+    <div>
+        <div class="container traning">
+            <h1>Trainings and Exercises</h1>
+            <p class="title">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        </div>
+        <div class="container top-row">
+            <div class="crd "><img src="images/exercise1.jpg" alt="">
+            <div class="overlay-1">
+            <p>Lorem Ipsum</p>
+            </div>
+        </div>
+            <div class="crd"><img src="images/exercise2.png" alt=""></div>
+            <div class="crd"><img src="images/exercise3.png" alt=""></div>
+        </div>
+        <div class="bottom-row container">
+            <div class="crd"><img src="images/exercise4.png" alt=""></div>
+            <div class="crd"><img src="images/exercise5.jpg" alt=""></div>
+            <div class="crd"><img src="images/exercise6.jpg" alt=""></div>
+        </div>
+    </div>
+    <div class="bmi">
+        <div class="container">
+            <h1>BMI Calcutaor</h1>
+            <p class="title">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        </div>
+        <div class="bmi-main-container">
+            <div class="container bmi-container">
+                <div>
+                    <h3>BMI Calculator Chart</h3>
+                    <table>
+                        <tr>
+                            <th>BMI</th>
+                            <TH>Weight Status</TH>
+                        </tr>
+                        <tr>
+                            <th>Below 18.5</th>
+                            <TH>Underweight</TH>
+                        </tr>
+                        <tr>
+                            <th>18.5 - 24.9</th>
+                            <TH>Healthy</TH>
+                        </tr>
+                        <tr>
+                            <th>BMI</th>
+                            <TH>Weight Status</TH>
+                        </tr>
+                        <tr>
+                            <th>30.0 - and Above</th>
+                            <TH>Obese</TH>
+                        </tr>
+                    </table>
+                </div>
+                <div>
+                      <h3>Calculate your BMI</h3>
+
+                      <div class="calculator">
+                        <form action="">
+                            <input type="text" placeholder="Height/cm">
+                            <input type="text" placeholder="Weight/kg">
+                            <input type="text" placeholder="Age">
+
+                            <select name="" id="">
+                                <option value="">Sex</option>
+                                <option value="">Male</option>
+                                <option value="">Fmale</option>
+                            </select>
+                            <select class="span-2" name="" id="">
+                                <option value="">Select an activity factor</option>
+                                <option value=""></option>
+                                <option value=""></option>
+                            </select>
+                            <div>
+                                <button class="btn-primary ">Calculate</button>
+                            </div>
+
+
+                        </form>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<footer>
+    <div class="container footer-main-cintainer">
+        <div class="footer-content">
+            <h1>Fitness</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+        </div>
+        <div class="footer-links">
+         <div>
+            <h4>Get Started</h4>
+            <ul>
+                <li>Service</li>
+                <li>Contact Us</li>
+                <li>Affiliate Program</li>
+                <li>About Us</li>
+                
+            </ul>
+         </div>
+
+
+         <div>
+            <h4>Get Started</h4>
+            <ul>
+                <li>Fitness</li>
+                <li>Platform</li>
+                <li>Workout Libary</li>
+                <li>App Design</li>
+              
+            </ul>
+         </div>
+        </div>
+    </div>
+  <div class="container last ">All right reserved @Fitness 2024</div>
+</footer>
+
+
     <main></main>
     <footer></footer>
 </body>
